[project]
name = "matlabhub"
version = "2025.3.0"
description = "matlabhub"
authors = [
    { name = "W. Pomp", email = "w.pomp@nki.nl" }
]
license = { text = "GPL-3.0-or-later"}
readme = "README.md"
keywords = ["matlab", "hub", "proxy-app"]
include = ["templates/*", "config.yml"]
requires-python = ">=3.8"

dependencies = [
    "flask",
    "gunicorn",
    "matlab-proxy",
    "pyyaml",
]

[project.urls]
repository = "https://github.com/wimpomp/matlabhub"

[project.scripts]
matlabhub = "matlabhub:main"

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
